--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <ul>
     <li style="color:#932A8A">HTML</li>
            <ol>
-            <li style="color:#BD8AB2 ;">Sheet 2</li>
-            <li style="color:#BD8AB2 ;">Sheet 3</li>
+            <li style="color:#BD8AB2;">  <a  href="sheet2.html">Sheet 2</a></li>
+            <li style="color:#BD8AB2;">  <a  href="sheet3.html">Sheet 3</a></li>
+            <li style="color:#BD8AB2;">  <a  href="sheet4.html">Sheet 4</a></li>
           </ol>
     <li style="color:#932A8A ;">CSS:</li>
     <li style="color:#932A8A ;">Javascript:</li>
