--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
           </ol>
     <li style="color:#932A8A ;">CSS:</li>
     <li style="color:#932A8A ;">Javascript:</li>
+        <ol>
+          <li style="color:#BD8AB2;">  <a  href="sheet6.html">JS Examples</a></li> 
+       </ol>
     <li style="color:#932A8A ;">PHP</li>
     </ul>
     <header>
