--- a/sheet6.html
+++ b/sheet6.html
@@ -39,7 +39,7 @@
     document.getElementById('m').src="IMG/turnOff.gif";
      }
      function turnOn(){
-    document.getElementById('m').src="IMG/turnOn.gif";
+    document.getElementById('m').src="IMG/TurnOn.gif";
      }
 
     </script>
