--- a/sheet6.html
+++ b/sheet6.html
@@ -36,10 +36,10 @@
     document.getElementById('n2').style.backgroundColor ="blue";
      }
      function turnOff(){
-    document.getElementById('m').src="IMG/turnOff.gif";
+    document.getElementById('m').src="IMG/Off.gif";
      }
      function turnOn(){
-    document.getElementById('m').src="IMG/TurnOn.gif";
+    document.getElementById('m').src="IMG/On.gif";
      }
 
     </script>
@@ -60,7 +60,7 @@
       <p id="re"></p>
       <h2 style="color:rgb(230, 230, 15);">Try my light! </h2>
       <button onclick="turnOff();">Turn off the light</button>
-      <img id="m" src="IMG/turnOff.gif">
+      <img id="m" src="IMG/Off.gif">
       <button onclick="turnOn();">Turn on the light</button>
       </body>
       </html>      
