--- a/sheet4.html
+++ b/sheet4.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <hr>
-<img src="C:\Users\nalqh\OneDrive\سطح المكتب\MySite\Web2\IMG\NationalDay.jpg" width="300"  height="200" alt="Saudi National Day logo">
+<img src="IMG/NationalDay.jpg" width="300"  height="200" alt="Saudi National Day logo">
 <hr>
 <p>
 <a href="#National Day"> 93th National Day</a> 
