--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <li style="color:#932A8A ;">Javascript:</li>
         <ol>
           <li style="color:#BD8AB2;">  <a  href="sheet6.html">JS Examples</a></li> 
+          <li style="color:#BD8AB2;">  <a  href="sheet7.html">JS Task 1</a></li> 
+          <li style="color:#BD8AB2;">  <a  href="sheet8.html">JS Task 2</a></li> 
+
        </ol>
     <li style="color:#932A8A ;">PHP</li>
     </ul>
