--- a/sheet8.html
+++ b/sheet8.html
@@ -8,12 +8,10 @@
     var Name;
     var Hnow = new Date();    
     var h= Hnow.getHours();
-    Name = window.prompt("please Enter your name") ;
-        if(h>12)
+    Name = window.prompt("Please Enter your name:") ;
+        if(h<12)
         document.write("<h1>Good Morning ,  ");
-        if(h<=12){
-            h=h-12;
-        if(h<6)
+        if(h>=12){
             document.write("<h1>Good Afternoon,  ");
         }
         document.writeln(Name + "</h1>");
