--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li style="color:#BD8AB2;">  <a  href="sheet7.html">JS Task 1</a></li> 
           <li style="color:#BD8AB2;">  <a  href="sheet8.html">JS Task 2</a></li> 
           <li style="color:#BD8AB2;">  <a  href="sheet9.html">Ex.BMI calculator</a></li>
-
+          <li style="color:#BD8AB2;">  <a  href="sheet10.html">JS validation</a></li>
        </ol>
     <li style="color:#932A8A ;">PHP</li>
     </ul>
